--- a/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj
+++ b/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="0809 - Exercício 3.c" />
     <ClCompile Include="0809 - Exercício 4.c" />
     <ClCompile Include="0809 - Exercício 5.c" />
+    <ClCompile Include="0809 - Exercício 6.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
