--- a/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj.filters
+++ b/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="0809 - Exercício 5.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="0809 - Exercício 6.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
