--- a/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj
+++ b/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="0809 - Exercício 5.c" />
     <ClCompile Include="0809 - Exercício 6.c" />
     <ClCompile Include="0809 - Exercício 7.c" />
+    <ClCompile Include="0809 - Exercício 8.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
