--- a/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj.filters
+++ b/Programador de Informática/C/Projetos/Projetos/Projetos.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="0809 - Exercício 10.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="0809 - Exercício 11.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
