--- a/Programador de Informática/C/Projetos/EscritaBinario/EscritaBinario.vcxproj.filters
+++ b/Programador de Informática/C/Projetos/EscritaBinario/EscritaBinario.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ListasSimples.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="ListasSimples2.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lista.h">
